# docs/openapi.yaml
@@ -78,6 +78,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+        '429':
+          description: Too many requests
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 
   /api/v1/auth/login:
     post:
@@ -104,6 +110,12 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
         '401':
           description: Invalid credentials
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '429':
+          description: Too many requests
           content:
             application/json:
               schema:
@@ -272,6 +284,7 @@ components:
       required: true
       schema:
         type: string
+        format: uuid
 
   schemas:
     RootResponse:
@@ -362,6 +375,7 @@ components:
           type: string
           enum:
             - ITEM_NOT_FOUND
+            - ROUTE_NOT_FOUND
         message:
           type: string
 
@@ -373,6 +387,17 @@ components:
           type: string
           enum:
             - UNPROCESSABLE_ENTITY_ERROR
+        message:
+          type: string
+
+    Error429Response:
+      type: object
+      required: [error_code, message]
+      properties:
+        error_code:
+          type: string
+          enum:
+            - RATE_LIMIT_EXCEEDED
         message:
           type: string
 
